--- a/codeforces/BUILD
+++ b/codeforces/BUILD
@@ -2709,6 +2709,15 @@ cc_binary(
 )
 
 cc_binary(
+    name = "hard_problem",
+    srcs = ["hard_problem.cc"],
+    copts = [
+        "-Werror",
+        "-std=c++17",
+    ],
+)
+
+cc_binary(
     name = "pizzaforces",
     srcs = ["pizzaforces.cc"],
     copts = [
