--- a/codeforces/BUILD
+++ b/codeforces/BUILD
@@ -2979,6 +2979,15 @@ cc_binary(
 )
 
 cc_binary(
+    name = "partitioning_the_array",
+    srcs = ["partitioning_the_array.cc"],
+    copts = [
+        "-Werror",
+        "-std=c++17",
+    ],
+)
+
+cc_binary(
     name = "winner",
     srcs = ["winner.cc"],
     copts = [
